@@ -17,22 +17,22 @@
 
 package org.apache.solr.update.processor;
 
+import static org.apache.solr.update.processor.IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate;
+import static org.hamcrest.Matchers.containsString;
+
 import java.io.IOException;
 import java.nio.charset.Charset;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
 import org.apache.solr.SolrTestCase;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.update.AddUpdateCommand;
+import org.apache.solr.util.LogListener;
+import org.hamcrest.MatcherAssert;
 import org.junit.Test;
-
-import static org.apache.solr.update.processor.IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate;
 
 public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
 
@@ -53,13 +53,32 @@ public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
     factory.init(args);
     UpdateRequestProcessor requestProcessor = factory.getInstance(null, null, null);
     requestProcessor.processAdd(getUpdate(1024));
-
   }
 
-  public AddUpdateCommand getUpdate(int size) {
+  @Test
+  public void testProcessorInPermissiveMode() throws IOException {
+    NamedList<Object> args = new NamedList<>();
+    args.add(IgnoreLargeDocumentProcessorFactory.LIMIT_SIZE_PARAM, 1);
+    args.add(IgnoreLargeDocumentProcessorFactory.PERMISSIVE_MODE_PARAM, true);
+
+    IgnoreLargeDocumentProcessorFactory factory = new IgnoreLargeDocumentProcessorFactory();
+    factory.init(args);
+
+    UpdateRequestProcessor processor = factory.getInstance(null, null, null);
+    try (LogListener listener = LogListener.warn(IgnoreLargeDocumentProcessorFactory.class)) {
+      processor.processAdd(getUpdate(1024));
+
+      MatcherAssert.assertThat(
+          listener.pollMessage(),
+          containsString("Skipping doc because estimated size exceeds limit"));
+    }
+  }
+
+  public AddUpdateCommand getUpdate(int sizeBytes) {
     SolrInputDocument document = new SolrInputDocument();
-    document.addField(new String(new byte[size], Charset.defaultCharset()), 1L);
-    assertTrue(IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document) > size);
+    document.addField(new String(new byte[sizeBytes], Charset.defaultCharset()), 1L);
+    assertTrue(
+        IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document) > sizeBytes);
 
     AddUpdateCommand cmd = new AddUpdateCommand(null);
     cmd.solrDoc = document;
@@ -70,9 +89,9 @@ public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
   public void testEstimateObjectSize() {
     assertEquals(estimate("abc"), 6);
     assertEquals(estimate("abcdefgh"), 16);
-    List<String> keys = Arrays.asList("int", "long", "double", "float", "str");
+    List<String> keys = List.of("int", "long", "double", "float", "str");
     assertEquals(estimate(keys), 42);
-    List<Object> values = Arrays.asList(12, 5L, 12.0, 5.0, "duck");
+    List<Object> values = List.of(12, 5L, 12.0, 5.0, "duck");
     assertEquals(estimate(values), 8);
 
     Map<String, Object> map = new HashMap<>();
@@ -87,23 +106,26 @@ public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
     for (Map.Entry<String, Object> entry : map.entrySet()) {
       document.addField(entry.getKey(), entry.getValue());
     }
-    assertEquals(IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document), estimate(map));
+    assertEquals(
+        IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document), estimate(map));
 
     SolrInputDocument childDocument = new SolrInputDocument();
     for (Map.Entry<String, Object> entry : map.entrySet()) {
       childDocument.addField(entry.getKey(), entry.getValue());
     }
     document.addChildDocument(childDocument);
-    assertEquals(IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document), estimate(map) * 2);
+    assertEquals(
+        IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document),
+        estimate(map) * 2);
   }
 
   @Test
   public void testEstimateObjectSizeWithSingleChild() {
     assertEquals(estimate("abc"), 6);
     assertEquals(estimate("abcdefgh"), 16);
-    List<String> keys = Arrays.asList("int", "long", "double", "float", "str");
+    List<String> keys = List.of("int", "long", "double", "float", "str");
     assertEquals(estimate(keys), 42);
-    List<Object> values = Arrays.asList(12, 5L, 12.0, 5.0, "duck");
+    List<Object> values = List.of(12, 5L, 12.0, 5.0, "duck");
     assertEquals(estimate(values), 8);
     final String childDocKey = "testChildDoc";
 
@@ -116,12 +138,13 @@ public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
     assertEquals(estimate(mapWChild), 50);
     Map<String, Object> childMap = new HashMap<>(mapWChild);
 
-
     SolrInputDocument document = new SolrInputDocument();
     for (Map.Entry<String, Object> entry : mapWChild.entrySet()) {
       document.addField(entry.getKey(), entry.getValue());
     }
-    assertEquals(IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document), estimate(mapWChild));
+    assertEquals(
+        IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document),
+        estimate(mapWChild));
 
     SolrInputDocument childDocument = new SolrInputDocument();
     for (Map.Entry<String, Object> entry : mapWChild.entrySet()) {
@@ -129,17 +152,21 @@ public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
     }
     document.addField(childDocKey, childDocument);
     mapWChild.put(childDocKey, childMap);
-    assertEquals(IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document), estimate(childMap) * 2 + estimate(childDocKey));
-    assertEquals(IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document), estimate(mapWChild));
+    assertEquals(
+        IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document),
+        estimate(childMap) * 2 + estimate(childDocKey));
+    assertEquals(
+        IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document),
+        estimate(mapWChild));
   }
 
   @Test
   public void testEstimateObjectSizeWithChildList() {
     assertEquals(estimate("abc"), 6);
     assertEquals(estimate("abcdefgh"), 16);
-    List<String> keys = Arrays.asList("int", "long", "double", "float", "str");
+    List<String> keys = List.of("int", "long", "double", "float", "str");
     assertEquals(estimate(keys), 42);
-    List<Object> values = Arrays.asList(12, 5L, 12.0, 5.0, "duck");
+    List<Object> values = List.of(12, 5L, 12.0, 5.0, "duck");
     assertEquals(estimate(values), 8);
     final String childDocKey = "testChildDoc";
 
@@ -152,26 +179,27 @@ public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
     assertEquals(estimate(mapWChild), 50);
     Map<String, Object> childMap = new HashMap<>(mapWChild);
 
-
     SolrInputDocument document = new SolrInputDocument();
     for (Map.Entry<String, Object> entry : mapWChild.entrySet()) {
       document.addField(entry.getKey(), entry.getValue());
     }
-    assertEquals(IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document), estimate(mapWChild));
+    assertEquals(
+        IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document),
+        estimate(mapWChild));
 
     SolrInputDocument childDocument = new SolrInputDocument();
     for (Map.Entry<String, Object> entry : mapWChild.entrySet()) {
       childDocument.addField(entry.getKey(), entry.getValue());
     }
-    List<SolrInputDocument> childList = new ArrayList<SolrInputDocument>(){
-      {
-        add(childDocument);
-        add(new SolrInputDocument(childDocument));
-      }
-    };
+    List<SolrInputDocument> childList =
+        List.of(childDocument, new SolrInputDocument(childDocument));
     document.addField(childDocKey, childList);
     mapWChild.put(childDocKey, childList);
-    assertEquals(IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document), estimate(mapWChild));
-    assertEquals(IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document), estimate(childMap) * (childList.size() + 1) + estimate(childDocKey));
+    assertEquals(
+        IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document),
+        estimate(mapWChild));
+    assertEquals(
+        IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document),
+        estimate(childMap) * (childList.size() + 1) + estimate(childDocKey));
   }
 }
